[project]
name = "py-cylinder-fitting"
version = "1.0.0"
authors = [{ name="Cristiano Pizzamiglio", email="cristianopizzamiglio@gmail.com" }]
description = "This package allows to compute the best fit cylinder given points in three-dimensional space."
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = ["cylinder", "best-fit"]
dependencies = ["scikit-spatial >= 1.0.1", "scipy >= 1.9.3"]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/CristianoPizzamiglio/py-cylinder-fitting"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
